<resources>
    <string name="epubactivity_drm_info" translatable="false">DRM Info</string>
    <string name="epubactivity_set_bookmark" translatable="false">Add a bookmark</string>
    <string name="epubactivity_settings" translatable="false">User Settings</string>
    <string name="epubactivity_book_nav_options" translatable="false">Book navigation menu</string>
    <string name="epubactivity_read_aloud_start" translatable="false">Read Aloud</string>
    <string name="epubactivity_search" translatable="false">Search</string>
    <string name="title_fragment_drm_management" translatable="false">DRM Management</string>
    <string name="more_options" translatable="false">More Options</string>
    <string name="popup_delete_button" translatable="false">DELETE</string>
    <string name="app_version_header" translatable="false">Version</string>
    <string name="app_version_label" translatable="false">App Version:</string>
    <string name="app_version" translatable="false">2.2.0</string>
    <string name="github_tab_label" translatable="false">GitHub Tag:</string>
    <string name="github_tag" translatable="false">2.2.0</string>
    <string name="copyright_label" translatable="false">Copyright</string>
    <string name="copyright" translatable="false">\@ 2019 European Digital Reading Lab</string>
    <string name="bsd_license_label" translatable="false">[BSD-3 license]</string>
    <string name="bsd_license_label_accessible" translatable="false">[B S D 3 license]</string>
    <string name="acknowledgements_label" translatable="false">Acknowledgements</string>
    <string name="acknowledgements_french_state" translatable="false">R2 Reader wouldn\'t have been developed without the financial help of the French state.</string>
    <string name="catalog_list_more" translatable="false">More</string>
    <string name="catalog_detail_download_button" translatable="false">Download</string>
    <string name="drm_information_header" translatable="false">INFORMATION</string>
    <string name="drm_label_license_type" translatable="false">License Type</string>
    <string name="drm_label_state" translatable="false">State</string>
    <string name="drm_label_provider" translatable="false">Provider</string>
    <string name="drm_label_issued" translatable="false">Issued</string>
    <string name="drm_label_updated" translatable="false">Updated</string>
    <string name="drm_label_rights" translatable="false">RIGHTS</string>
    <string name="drm_label_prints_left" translatable="false">Prints left</string>
    <string name="drm_label_copies_left" translatable="false">Copies left</string>
    <string name="drm_label_start" translatable="false">Start</string>
    <string name="drm_label_end" translatable="false">End</string>
    <string name="drm_label_actions" translatable="false">ACTIONS</string>
    <string name="drm_label_renew" translatable="false">RENEW</string>
    <string name="drm_label_return" translatable="false">RETURN</string>
    <string name="zero" translatable="false">00:00</string>
    <string name="chapter_page" translatable="false">Chapter / Page</string>
    <string name="progression" translatable="false">Progression</string>
    <string name="timestamp" translatable="false">Timestamp</string>
    <string name="contents_tab_label" translatable="false">Contents</string>
    <string name="bookmarks_tab_label" translatable="false">Bookmarks</string>
    <string name="highlights_tab_label" translatable="false">Highlights</string>
    <string name="pagelist_tab_label" translatable="false">Page List</string>
    <string name="landmarks_tab_label" translatable="false">Landmarks</string>
    <string name="action_mode_menu_highlight" translatable="false">Highlight</string>
    <string name="action_mode_menu_underline" translatable="false">Underline</string>
    <string name="action_mode_menu_note" translatable="false">Note</string>
    <string name="bookmark_added" translatable="false">Bookmark added</string>
    <string name="bookmark_exists" translatable="false">Bookmark already exists</string>
    <string name="title_catalogs" translatable="false">Catalogs</string>
    <string name="title_bookshelf" translatable="false">Bookshelf</string>
    <string name="title_about" translatable="false">About</string>
    <string name="cover_image" translatable="false">Cover Image</string>
    <string name="repfr" translatable="false">repfr</string>
    <string name="details" translatable="false">Details</string>
    <string name="close" translatable="false">Close</string>
    <string name="share" translatable="false">Share</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="confirm_delete_book_title" translatable="false">Delete Book?</string>
    <string name="confirm_delete_book_text" translatable="false">Are you sure you want to delete this book?</string>
    <string name="confirm_delete_catalog_title" translatable="false">Delete Catalog?</string>
    <string name="confirm_delete_catalog_text" translatable="false">Are you sure you want to delete this Catalog feed?</string>
    <string name="add_book" translatable="false">Add a Book</string>
    <string name="add_catalog" translatable="false">Add an Catalog Feed</string>
    <string name="ok" translatable="false">OK</string>
    <string name="save" translatable="false">Save</string>
    <string name="enter_title" translatable="false">Enter the Title</string>
    <string name="enter_url" translatable="false">Enter the URL</string>
    <string name="invalid_title" translatable="false">Please enter a title</string>
    <string name="invalid_url" translatable="false">Please enter a valid URL</string>
    <string name="catalog_parse_error" translatable="false">Error parsing Catalog feed. Please check the URL and try again</string>
    <string name="return_publication" translatable="false">This will return the publication</string>
    <string name="return_button" translatable="false">Return</string>
    <string name="opening_publication_cannot_render" translatable="false">Cannot render publication.</string>
    <string name="opening_publication_audio_engine_initialization" translatable="false">Could not open publication because audio engine initialization failed.</string>
    <string name="import_publication_unexpected_io_exception" translatable="false">Unable to add publication due to an unexpected error on your device</string>
    <string name="import_publication_download_failed" translatable="false">Publication download failed.</string>
    <string name="import_publication_no_acquisition" translatable="false">Acquisition is not possible.</string>
    <string name="import_publication_success" translatable="false">Publication added to your library</string>
    <string name="import_publication_unable_add_pub_database" translatable="false">Unable to add publication to the database</string>
    <string name="import_publication_inconsistent_state" translatable="false">Import failed because of exceptional conditions. Please try again.</string>
    <string name="publication_error_unsupported_asset" translatable="false">Asset format is not supported</string>
    <string name="publication_error_network_forbidden" translatable="false">Server denied access to a resource.</string>
    <string name="publication_error_network_not_found" translatable="false">A resource has not been found on the server.</string>
    <string name="publication_error_network_unreachable" translatable="false">Server cannot be reached.</string>
    <string name="publication_error_network_timeout" translatable="false">Server was too long to respond.</string>
    <string name="publication_error_network_ssl_handshake" translatable="false">A SSL error occurred.</string>
    <string name="publication_error_network_unexpected" translatable="false">An unexpected network error occurred.</string>
    <string name="publication_error_filesystem_not_found" translatable="false">A file has not been found.</string>
    <string name="publication_error_filesystem_forbidden" translatable="false">You are not allowed to access the file.</string>
    <string name="publication_error_filesystem_unexpected" translatable="false">An unexpected filesystem error occurred.</string>
    <string name="publication_error_filesystem_insufficient_space" translatable="false">There is not enough space left on the device.</string>
    <string name="publication_error_incorrect_credentials" translatable="false">Provided credentials were incorrect</string>
    <string name="publication_error_restricted" translatable="false">You are not allowed to open this publication</string>
    <string name="publication_error_out_of_memory" translatable="false">There is not enough memory on this device to open the publication.</string>
    <string name="publication_error_scheme_not_supported" translatable="false">Publication source is not supported.</string>
    <string name="publication_error_invalid_publication" translatable="false">Publication looks corrupted.</string>
    <string name="publication_error_unexpected" translatable="false">An unexpected error occurred.</string>
    <string name="lcp_error_license_interaction_not_available" translatable="false">This interaction is not available</string>
    <string name="lcp_error_license_profile_not_supported" translatable="false">This License has a profile identifier that this app cannot handle, the publication cannot be processed</string>
    <string name="lcp_error_crl_fetching" translatable="false">Can\'t retrieve the Certificate Revocation List</string>
    <string name="lcp_error_network" translatable="false">Network error</string>
    <string name="lcp_error_runtime" translatable="false">Unexpected LCP error</string>
    <string name="lcp_error_unknown" translatable="false">Unknown LCP error</string>
    <string name="lcp_error_license_status.cancelled" translatable="false">This license was cancelled on %1$s</string>
    <string name="lcp_error_license_status.returned" translatable="false">This license has been returned on %1$s</string>
    <string name="lcp_error_license_status.not_started" translatable="false">This license starts on %1$s</string>
    <string name="lcp_error_license_status.expired" translatable="false">This license expired on %1$s</string>
    <plurals name="lcp_error_license_status.revoked" translatable="false">
        <item quantity="one">This license was revoked by its provider on %1$s. It was registered by %2$d device.</item>
        <item quantity="other">This license was revoked by its provider on %1$s. It was registered by %2$d devices.</item>
    </plurals>
    <string name="lcp_error_renew.renew_failed" translatable="false">Your publication could not be renewed properly</string>
    <string name="lcp_error_renew.invalid_renewal_period" translatable="false">Incorrect renewal period, your publication could not be renewed</string>
    <string name="lcp_error_renew.unexpected_server_error" translatable="false">An unexpected error has occurred on the server</string>
    <string name="lcp_error_return.return_failed" translatable="false">Your publication could not be returned properly</string>
    <string name="text_upload_your_favorite_book_and_start_your_journey">Upload your favorite book and start your journey!</string>
    <string name="text_you_can_upload_book_in_epub_format">You can upload book in .EPUB format</string>
    <string name="text_add_new_epub_book">Add new .EPUB book</string>
    <string name="text_unknown_error_please_try_again">Unknown error. Please try again</string>
    <string name="text_last_opened_books">Last opened books</string>
    <string name="text_add_new_book">Add new book</string>
    <string name="text_show_all_27_books">Show all 27 books</string>
    <string name="text_show_less">Show less</string>
</resources>