<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:layout_height="match_parent">

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/circularProgressBar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            style="@style/Widget.Material3.CircularProgressIndicator"
            app:cpb_indeterminate_mode="true"
            android:layout_gravity="center"
            app:cpb_progress="70"
            app:cpb_background_progressbar_color="@color/transparent_progress_bar_color"
            app:cpb_background_progressbar_width="6dp"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="@color/progress_bar_color"
            app:cpb_progressbar_width="10dp"
            app:cpb_round_border="true" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/main_book_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="visible"
        android:orientation="vertical">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:importantForAccessibility="no"
            android:src="@drawable/image_add_book" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="@string/text_upload_your_favorite_book_and_start_your_journey"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/text_you_can_upload_book_in_epub_format"
                android:textColor="@color/gray_color"
                android:textSize="20sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/add_book_button"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:cardBackgroundColor="@color/button_background_color"
                app:cardCornerRadius="12dp"
                app:strokeColor="@android:color/transparent"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:id="@+id/reference_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="12dp"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/icon_plus" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/semi_bold"
                        android:text="@string/text_add_new_epub_book"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/text_unknown_error_please_try_again"
                android:textColor="@color/error_color"
                android:textSize="20sp"
                android:visibility="invisible" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>