<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="32dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/regular"
                        android:gravity="center"
                        android:text="@string/text_last_opened_books"
                        android:textColor="@color/gray_color"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/icon_delete"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:importantForAccessibility="no"
                        android:padding="10dp"
                        android:src="@drawable/icon_delete" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bookshelf_bookList"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="24dp"
                    android:clipToPadding="false"
                    tools:itemCount="1" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/show_all_books_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="161dp"
                    android:visibility="visible"
                    app:cardBackgroundColor="@color/background_color"
                    app:cardCornerRadius="16dp"
                    app:strokeColor="@color/card_stroke_color"
                    app:strokeWidth="1dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="10dp"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginEnd="8dp"
                            android:importantForAccessibility="no"
                            android:src="@drawable/icon_arrow_down"
                            app:tint="@color/white" />

                        <TextView
                            android:id="@+id/show_all_books_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/medium"
                            android:gravity="center"
                            android:text="@string/text_show_all_27_books"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/hide_books_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="161dp"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/background_color"
                    app:cardCornerRadius="16dp"
                    app:strokeColor="@color/card_stroke_color"
                    app:strokeWidth="1dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="10dp"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:id="@+id/hide_books_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/medium"
                            android:gravity="center"
                            android:text="@string/text_show_less"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/background_gradient"
        android:orientation="vertical"
        android:paddingBottom="25dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="40dp"
            tools:ignore="UselessParent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/add_book_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/button_background_color"
                app:cardCornerRadius="12dp"
                app:strokeColor="@android:color/transparent"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:id="@+id/reference_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="12dp"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/icon_plus" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/semi_bold"
                        android:gravity="center"
                        android:text="@string/text_add_new_book"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </FrameLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
