<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/background_color">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:fontFamily="@font/medium"
                        android:text="Last opened book"
                        android:gravity="center" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/bookshelf_bookList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"/>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/show_all_books_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:cardBackgroundColor="@color/background_color"
                        app:cardCornerRadius="16dp"
                        app:strokeColor="@color/card_stroke_color"
                        app:strokeWidth="1dp">

<!--                        todo add progress bar  -->
                        <com.mikhaellopez.circularprogressbar.CircularProgressBar
                            android:id="@+id/circularProgressBar"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            style="@style/Widget.Material3.CircularProgressIndicator"
                            app:cpb_indeterminate_mode="true"
                            android:layout_gravity="center"
                            app:cpb_progress="70"
                            android:visibility="gone"
                            app:cpb_background_progressbar_color="@color/transparent_progress_bar_color"
                            app:cpb_background_progressbar_width="6dp"
                            app:cpb_progress_direction="to_right"
                            app:cpb_progressbar_color="@color/progress_bar_color"
                            app:cpb_progressbar_width="20dp"
                            app:cpb_round_border="true" />


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginVertical="10dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_marginEnd="8dp"
                                android:importantForAccessibility="no"
                                android:src="@drawable/icon_arrow_down"
                                app:tint="@color/white" />

                            <TextView
                                android:id="@+id/show_all_books_text"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/medium"
                                android:gravity="center"
                                android:text="@string/text_show_all_27_books"
                                android:textColor="@color/white"
                                android:textSize="14sp" />
                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/hide_books_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="161dp"
                        android:visibility="gone"
                        app:cardBackgroundColor="@color/background_color"
                        app:cardCornerRadius="16dp"
                        app:strokeColor="@color/card_stroke_color"
                        app:strokeWidth="1dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginVertical="10dp"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <TextView
                                android:id="@+id/hide_books_text"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/medium"
                                android:gravity="center"
                                android:text="@string/text_show_less"
                                android:textColor="@color/white"
                                android:textSize="14sp" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <!-- Fixed "Add New Book" button at the bottom -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="40dp"
        tools:ignore="UselessParent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/add_book_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/button_background_color"
            app:cardCornerRadius="12dp"
            app:strokeColor="@android:color/transparent"
            app:strokeWidth="0dp">

            <LinearLayout
                android:id="@+id/reference_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/icon_plus" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/semi_bold"
                    android:gravity="center"
                    android:text="@string/text_add_new_book"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
